# rule110

./: Cargo.toml  README.md  c_bench.sh  rust_bench.sh  rust_bench_fnky.sh
c/: rule110.c
src/: c.rs  fnky.rs  main.rs
