[package]
name = "rule110"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "c"
path = "src/c.rs"
[[bin]]
name = "fnky"
path = "src/fnky.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
